--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -1,4 +1,4 @@
-<html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
+<html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <html lang="kr" xmlns:th="http://www.thymeleaf.org">
 
 <div layout:fragment="content" class="container my-3">
@@ -8,6 +8,9 @@
             <div class="card-text" style="white-space: pre-line;" th:text="${question.content}"></div>
             <div class="d-flex justify-content-end">
                 <div class="badge bg-light text-dark p-2 text-start">
+                    <div>
+                        <span th:if="${question.author != null}" th:text="${question.author.username}"></span>
+                    </div>
                     <div th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></div>
                 </div>
             </div>
@@ -23,6 +26,9 @@
             <div class="card-text" style="white-space: pre-line;" th:text="${answer.content}"></div>
             <div class="d-flex justify-content-end">
                 <div class="badge bg-light text-dark p-2 text-start">
+                    <div>
+                        <span th:if="${question.author != null}" th:text="${question.author.username}"></span>
+                    </div>
                     <div th:text="${#temporals.format(answer.localDateTime, 'yyyy-MM-dd HH:mm')}"></div>
                 </div>
             </div>
@@ -30,17 +36,13 @@
     </div>
 
 
-<!--<div>-->
-<!--    <ul>-->
-<!--        <li th:each="answer : ${question.answerList}" th:text="${answer.content}"></li>-->
-<!--    </ul>-->
-<!--</div>-->
-
-
     <form th:action="@{|/answer/create/${question.id}|}" th:object="${answerForm}" method="post" class="my-3">
         <div th:replace="~{form_errors :: formErrorsFragment}"></div>
-        <textarea name="content" id="content" rows="10" class="form-control"></textarea>
+        <textarea sec:authorize="isAnonymous()" disabled th:field="*{content}" rows="10" class="form-control"></textarea>
+        <textarea sec:authorize="isAuthenticated()" th:field="*{content}" rows="10" class="form-control"></textarea>
+        <div sec:authorize="isAnonymous()" class="mt-2">회원만 답변을 작성할 수 있습니다.</div>
         <input type="submit" value="답변등록" class="btn btn-primary my-2">
     </form>
+
 </div>
 </html>
