--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -2,7 +2,9 @@
 <html lang="kr" xmlns:th="http://www.thymeleaf.org">
 
 <div layout:fragment="content" class="container my-3">
-    <h2 class="border-bottom py-2" th:text="${question.subject}"></h2>
+    <div class="mt-5">
+        <h2 class="border-bottom py-2" th:text="${question.subject}"></h2>
+    </div>
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text" th:utext="${@commonUtil.markdown(question.content)}"></div>
